--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <ul id="list">
             </ul>
         </div>
+        <button id="clearButton" onclick="clearItems()">
+            <img src="trash.gif" alt="" id="trashIMG">
+        </button>
     </div>
 </body>
 <script src="script.js"></script>
